# automake-test

./: .gitignore  Makefile.am  README.md  config.h  config.status  configure  configure.ac  main.c
add/: Makefile.am  add.h
sub/: Makefile.am  sub.h
